fix minor gap in section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,6 +18,15 @@ body::-webkit-scrollbar-thumb:hover {
 
 /* ======================================================================================================================== */
 
+/* loader animation
+@keyframes fadeInUp {
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+
 /* Reset and Layout */
 *, *::before, *::after {
   box-sizing: border-box;
@@ -31,7 +40,6 @@ body::-webkit-scrollbar-thumb:hover {
 html {
   height: 100%;
   scroll-behavior: smooth;
-  scroll-padding-top: 4rem; /* optional */
 }
 
 body {
@@ -66,7 +74,7 @@ footer {
     flex-shrink: 0;
     padding: 1rem 1.5rem;
     background-color: transparent;
-    backdrop-filter: blur(10px); /* Reduced for performance */
+    backdrop-filter: blur(10px);
     color: var(--mvp-color-nav-text);
     border-top: 1px solid var(--mvp-color-bg-light);
     transition:
@@ -80,15 +88,16 @@ footer p {
     margin: 0;
 }
 
-@keyframes fadeInUp {
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
 .section-full {
   min-height: 100vh;
+  scroll-margin-top: 0;
+}
+
+#portfolio,
+#profile,
+#service,
+#contacts {
+  scroll-margin-top: 1rem;
 }
 
 .day-night-theme {
@@ -97,7 +106,6 @@ footer p {
   margin-top: 1.25rem;
   cursor: pointer;
 }
-
 
 .nav-link.active {
   background-color: var(--util-color-primary);
